Replaced SVGs with PNGs; added dark version of theme (EXPERIMENTAL)

--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,5 +1,6 @@
 [Settings]
-gtk-auto-mnemonics = 0
-gtk-enable-mnemonics = 1
-gtk-visible-focus = automatic
+gtk-auto-mnemonics = false
+gtk-enable-animations = false
+gtk-enable-mnemonics = true
 gtk-primary-button-warps-slider = false
+gtk-visible-focus = automatic
